--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example.ApiCreations</groupId>
 	<artifactId>ApiDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>ApiDemo</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
