--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
@@ -63,7 +63,7 @@
 			<plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-clean-plugin</artifactId>
-    <version>3.1.0</version>
+    <version>3.8.2</version>
 </plugin>
 
 		</plugins>
